Testing my updated Gradle plugins